--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
         <body>
             <h1>RUN BUDDY</h1>
-            What We Do 🏃
+            What We Do 🏃 What You Do 🏃 Your Trainers 🏃 Reach Out 🏃
         </body>
 </html>
