--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 
            <!-- hero/jumbotron-->
            <section class="hero">
+               <div class="intro">
+                   <h2>Start Building Habits.</h2>
+                   <p>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, harum. Voluptate unde natus voluptatem. Natus consequuntur reprehenderit quae? Tempora qui repellat voluptas nemo possimus, animi pariatur explicabo iure iste eligendi?
+                   </p>
+               </div>
                <div class="hero-form">
                    <h3>Get Started Today</h3>
                    <p>Fill out this form and one of our trainers will schedule a consult</p>
