add flexbox to the hero

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
            <!-- hero/jumbotron-->
            <section class="hero">
-               <div class="intro">
+               <div class="hero-cta">
                    <h2>Start Building Habits.</h2>
                    <p>
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, harum. Voluptate unde natus voluptatem. Natus consequuntur reprehenderit quae? Tempora qui repellat voluptas nemo possimus, animi pariatur explicabo iure iste eligendi?
