--- a/index.html
+++ b/index.html
@@ -234,10 +234,9 @@
                     </form>
                 </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.431413956319!2d-79.71206268477648!3d43.47246637912794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b5d30e2a8cd63%3A0x52e75b08a8edffdc!2s2226%20Castlefield%20Crescent%2C%20Oakville%2C%20ON%20L6H%205C1!5e0!3m2!1sen!2sca!4v1629411066322!5m2!1sen!2sca"  
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.213721045179!2d-79.87919328450661!3d43.51873577912603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b6fa72fa9e459%3A0xd02329ddd919b34c!2s5555%20Main%20St%20E%2C%20Milton%2C%20ON%20L9T%202M3!5e0!3m2!1sen!2sca!4v1630868646624!5m2!1sen!2sca" 
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
 
                </div>
            </section>
